--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,10 @@
   font-family: 'Maven Pro';
   src: local('Maven Pro'), url(./fonts/MavenPro-Regular.ttf) format('truetype');
 }
+@font-face {
+  font-family: 'Open sans';
+  src: local('Open sans'), url(./fonts/OpenSans-Regular.ttf) format('truetype');
+}
 body{
   margin: 0;
   font-family: 'Maven Pro', sans-serif;
@@ -19,8 +23,9 @@ body{
   flex-direction: column;
   font-size: 48px;
   color: #C7565A;
+  height: 100vh;
   /* border: 1px solid red; */
-  width: 660px;
+  /* width: 660px; */
 }
 
 .text-box{
@@ -65,4 +70,76 @@ body{
 .anim svg {
   width: 600px;
   height: 200px;
+}
+
+.content{
+  margin-top: 100px;
+  flex: 1 0 auto;
+  display: flex;
+  justify-content: center;
+  align-items:center;
+  flex-direction: column;
+}
+
+.scroll{
+  flex-shrink: 0;
+  height: 100px;
+  /* padding-bottom: 30px; */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  font-size: 18px;
+  color: lightgray;
+  font-family: 'Open sans'
+}
+
+.mouse{
+  /* margin-bottom: 30px; */
+  border: 2px solid #C7565A;
+  height: 35px;
+  width: 21px;
+  border-radius: 35px;
+  animation-name: mouse;
+  transform-origin: center bottom;
+  animation-duration: 1s;
+  animation-fill-mode: both;
+  animation-iteration-count: 4;
+  position: relative;
+  margin-bottom: 5px;
+}
+
+.dot{
+  position: absolute;
+  width: 5px;
+  height: 5px;
+  border-radius: 50%;
+  background-color: #C7565A;
+  top: 7px;
+  left: 7.5px;
+}
+
+@keyframes mouse {
+  0%, 20%, 53%, 80%, 100% {
+    -webkit-animation-timing-function: cubic-bezier(0.215, 0.610, 0.355, 1.000);
+    animation-timing-function: cubic-bezier(0.215, 0.610, 0.355, 1.000);
+    -webkit-transform: translate3d(0,0,0);
+    transform: translate3d(0,0,0);
+}
+40%, 43% {
+    -webkit-animation-timing-function: cubic-bezier(0.755, 0.050, 0.855, 0.060);
+    animation-timing-function: cubic-bezier(0.755, 0.050, 0.855, 0.060);
+    -webkit-transform: translate3d(0, -30px, 0);
+    transform: translate3d(0, -30px, 0);
+}
+70% {
+    -webkit-animation-timing-function: cubic-bezier(0.755, 0.050, 0.855, 0.060);
+    animation-timing-function: cubic-bezier(0.755, 0.050, 0.855, 0.060);
+    -webkit-transform: translate3d(0, -15px, 0);
+    transform: translate3d(0, -15px, 0);
+}
+90% {
+    -webkit-transform: translate3d(0,-4px,0);
+    transform: translate3d(0,-4px,0);
+}
 }
